# AgentMonitor

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  README.zh-CN.md
.github/workflows/: release.yml
crates/agentmonitor/: Cargo.toml
crates/agentmonitor/examples/: bench_loader.rs
crates/agentmonitor/src/: app.rs  config.rs  event.rs  export.rs  i18n.rs  keybinding.rs  lib.rs  main.rs  pricing.rs  settings.rs
crates/agentmonitor/src/adapter/: claude.rs  claude_desktop.rs  codex.rs  conversation.rs  gemini.rs  hermes.rs  mod.rs  opencode.rs  types.rs
crates/agentmonitor/src/collector/: diagnostics.rs  fs_watch.rs  metrics.rs  mod.rs  proc_sampler.rs  responsible.rs  token_refresh.rs  token_trend.rs
crates/agentmonitor/src/tui/: dashboard.rs  detail.rs  help.rs  mod.rs  process.rs  render.rs  sessions.rs  settings.rs  stats.rs  theme.rs  viewer.rs  widgets.rs
crates/agentmonitor/tests/: integration.rs
docs/plans/: 2026-04-25-dashboard-jump-and-session-query-plan.md  2026-05-01-optimization-roadmap.md
npm/agent-monitor/: package.json
