[package]
name = "agentmonitor"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "High-performance TUI to monitor Claude Code / Codex sessions and processes"

[[bin]]
name = "agent-monitor"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "sync", "fs", "time", "signal", "io-util"] }
sysinfo = "0.32"
notify = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
directories = "5"
walkdir = "2"
async-trait = "0.1"
parking_lot = "0.12"
futures = { version = "0.3", default-features = false, features = ["std"] }
